--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -20,7 +20,7 @@
 			<div class="title">교육과정 지원자 관리</div>
 			<!-- Route -->
 			<div class="route">
-				 <a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/class/list}">교육과정
+				 <a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/class/list/1}">교육과정
 					관리</a> > <a th:href="@{/admin/class/__${classVO.clssId}__/applicant}">지원자
 					관리</a>
 			</div>
