--- a/KosaESS/src/main/resources/templates/admin/student_form.html
+++ b/KosaESS/src/main/resources/templates/admin/student_form.html
@@ -22,7 +22,7 @@
 			<!-- Route -->
 			<div class="route">
 				<a th:href="@{/admin}">대시보드</a> > <a
-					th:href="@{/admin/student/list}">교육생 관리</a> > <a
+					th:href="@{/admin/student/list/1}">교육생 관리</a> > <a
 					th:href="@{/admin/student/view/__${student.stdtId}__}">교육생 상세보기</a>
 			</div>
 		</div>
