[eunji][#update] 강의관리-강의등록 끝!

--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -49,7 +49,7 @@
 					</div>
 
 					<div class="col" style="width: 33%">
-						<div class="col_title">업체명</div>
+						<div class="col_title">기업명</div>
 						<div class="col_content" th:text="${classVO.cmpyNm}">
 						</div>
 					</div>
