--- a/KosaESS/src/main/resources/templates/admin/insert_company_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_company_popup.html
@@ -19,7 +19,7 @@
 					placeholder="기업명" maxlength="100" required></td>
 			</tr>
 			<tr class="input_wrap">
-				<th><span class="title">전화번호<span class="red">*</span></span></th>
+				<th><span class="title">연락처<span class="red">*</span></span></th>
 				<td><input type="text" class="cmpy_tel" name="cmpyTel"
 					placeholder="전화번호" maxlength="13" oninput="autoHyphen(this)"
 					required></td>
