--- a/KosaESS/src/main/resources/templates/admin/lecture_list.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list.html
@@ -173,6 +173,11 @@
 									style="display: none; width: 80px;"
 									class="lecture_input lecture_tm" type="number"
 									th:value="${lecture.lctrTm}"></td>
+								<td class="td_lecture_etc"><span class="lecture_span"
+									th:text="${lecture.lctrEtc}"></span> <input
+									style="display: none; width: 80px;"
+									class="lecture_input lecture_etc" type="number"
+									th:value="${lecture.lctrEtc}"></td>
 							</tr>
 						</tbody>
 					</table>
