--- a/KosaESS/src/main/resources/templates/admin/select_manager_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/select_manager_popup.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="manager_list_wrap">
 			<div class="manager_nm" onclick="selectManager(this)">
-				<input type="hidden" value=""> <span>미정</span>
+				<input type="hidden" value=""> <span class="mngr_nm">미정</span>
 			</div>
 			<div class="manager_nm" onclick="selectManager(this)"
 				th:each="manager: ${managerList}">
