--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -121,7 +121,7 @@
 					<div class="content_info_btn_wrap">
 						<!-- 엑셀 다운로드 버튼 -->
 						<button type="button" id="excel_btn">
-							<img th:src="@{/img/excel.png}"><span>엑셀 다운로드</span>
+							<img th:src="@{/img/excel.png}"><span>엑셀</span>
 						</button>
 					
 						<!-- 합격 버튼 -->
