--- a/KosaESS/src/main/resources/templates/admin/select_subject_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/select_subject_popup.html
@@ -22,7 +22,7 @@
 				<!-- 총 개수 및 버튼-->
 				<div class="content_info_wrap">
 					<div style="margin-left: 5px;">
-						과목 총 <span class="cnt subject_cnt"
+						총 <span class="cnt subject_cnt"
 							th:text="${#lists.size(subjectList)}"></span> 건
 					</div>
 					<div class="content_info_button_wrap">
