[seungwoo][#etc]임시저장(json만 보내면 됨)

--- a/KosaESS/src/main/resources/static/css/manager/manager_subsidy_view.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_subsidy_view.css
@@ -202,3 +202,13 @@ button:hover{
 	align-items: center;
 	justify-content: center;
 }
+
+.subsidy_list_table_row td img{
+	height:1.6em;
+}
+.subsidy_list_table_row td img:hover{
+	cursor: pointer;
+}
+input:hover, select:hover{
+	cursor: pointer;
+}
