[eunji][#update]mapper수정

--- a/KosaESS/src/main/resources/templates/admin/class_form.html
+++ b/KosaESS/src/main/resources/templates/admin/class_form.html
@@ -627,7 +627,7 @@
 					type : "POST",
 					success : function(response) {
 						alert("삭제되었습니다.");
-						location.href = "/admin/class/list";
+						location.href = "/admin/class/list/1";
 					},
 					error : {}
 				});
