--- a/KosaESS/src/main/resources/templates/admin/company_list.html
+++ b/KosaESS/src/main/resources/templates/admin/company_list.html
@@ -127,15 +127,15 @@
 				<nav class="page_nav" aria-label="Page navigation">
 					<ul class="pagination">
 						<li th:if="${nowPageBlock>1}"><a
-							th:href="@{/admin/notice/list/__${startPage-1}__}"
+							th:href="@{/admin/company/list/__${startPage-1}__}"
 							aria-label="Previous">이전</a></li>
 
 						<li th:each="i: ${#numbers.sequence(startPage, endPage)}"
 							th:classappend="${i==nowPage}?active"><a
-							th:href="@{/admin/notice/list/__${i}__}">[[${i}]]</a></li>
+							th:href="@{/admin/company/list/__${i}__}">[[${i}]]</a></li>
 
 						<li th:if="${nowPageBlock<totalPageBlock}"><a
-							th:href="@{/admin/notice/list/__${endPage+1}__}"
+							th:href="@{/admin/company/list/__${endPage+1}__}"
 							aria-label="Next">다음</a></li>
 					</ul>
 				</nav>
