[dabin][#update]문의사항 수정

--- a/KosaESS/src/main/resources/static/css/student/inquiry_write.css
+++ b/KosaESS/src/main/resources/static/css/student/inquiry_write.css
@@ -49,6 +49,11 @@ button {
 	background-color: #0E5881;
 	color: white;
 	margin: 0 2%;
+	cursor: pointer;
+}
+
+label {
+	cursor: pointer;
 }
 
 th {
