--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -75,9 +75,9 @@
 					</tr>
 					<tr>
 						<th>총 이수 시간</th>
-						<td><span th:if="${classDetail.clssTotalTm == null}"
+						<td><span th:if="${classDetail.clssTotalTm == 0}"
 							style="color: lightslategray;">미정</span><span
-							th:if="${classDetail.clssTotalTm!= null}"
+							th:if="${classDetail.clssTotalTm!= 0}"
 							th:text="${classDetail.clssTotalTm}+ '시간'"></span></td>
 						<th>시작 시간</th>
 						<td><span th:if="${classDetail.setInTime == null}"
@@ -90,9 +90,9 @@
 							th:if="${classDetail.setOutTime!= null}"
 							th:text="${classDetail.setOutTime}+ '시'"></span></td>
 						<th>수강 정원</th>
-						<td><span th:if="${classDetail.limitCnt == null}"
+						<td><span th:if="${classDetail.limitCnt == 0}"
 							style="color: lightslategray;">미정</span><span
-							th:if="${classDetail.limitCnt!= null}"
+							th:if="${classDetail.limitCnt!= 0}"
 							th:text="${classDetail.limitCnt}+ '명'"></span></td>
 					</tr>
 					<tr>
@@ -148,7 +148,7 @@
 									th:src="@{/student/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"><br>
 							</a></li>
 						</ul>
-						<h5>기타사항</h5>
+						<h5 th:if="${classDetail.clssEtc != null}">기타사항</h5>
 						<h5 th:text="${classDetail.clssEtc}"></h5>
 						<div class="btn" style="width: 100%;">
 							<button class="openModalBtn1" style="padding: 1.3%; width: 20%;">지원하기</button>
